--- a/src/main/resources/com/framja/gymmanagement/admin-portal.fxml
+++ b/src/main/resources/com/framja/gymmanagement/admin-portal.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
+<!--<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>-->
+
 <?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -9,50 +10,52 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.AdminPortal">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="330.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.AuthPortal">
     <children>
         <AnchorPane fx:id="main_form" prefHeight="200.0" prefWidth="200.0">
             <children>
-                <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@style/landing.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="login_form" layoutX="48.0" layoutY="75.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@style/portal.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <FontAwesomeIcon fill="#188ba7" glyphName="USER" layoutX="141.0" layoutY="91.0" size="5em" />
+<!--                        <FontAwesomeIcon fill="#188ba7" glyphName="USER" layoutX="141.0" layoutY="91.0" size="5em" />-->
                         <Label layoutX="102.0" layoutY="100.0" text="Login Account" textFill="#188ba7">
                             <font>
                                 <Font name="Tahoma" size="20.0" />
                             </font>
                         </Label>
                         <Label layoutX="130.0" layoutY="125.0" text="Admin Portal" />
-                        <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@style/landing.css">
+                        <TextField fx:id="login_username" layoutX="39.0" layoutY="177.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/landing.css">
+                        <PasswordField fx:id="login_password" layoutX="39.0" layoutY="213.0" onAction="#loginAccount" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </PasswordField>
-                        <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/landing.css" visible="false">
+                        <TextField fx:id="login_showPassword" layoutX="39.0" layoutY="213.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/portal.css" visible="false">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
                         <CheckBox fx:id="login_checkBox" layoutX="39.0" layoutY="249.0" mnemonicParsing="false" onAction="#loginShowPassword" text="Show Password" />
-                        <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@style/landing.css" text="Login">
+                        <Button fx:id="login_loginBtn" layoutX="40.0" layoutY="275.0" mnemonicParsing="false" onAction="#loginAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@style/portal.css" text="Login">
                             <styleClass>
                                 <String fx:value="btn-1" />
                                 <String fx:value="radius" />
                             </styleClass>
                         </Button>
-                        <FontAwesomeIcon fill="#188ba7" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="435.0" size="6em" />
-                        <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@style/landing.css">
+<!--                        <FontAwesomeIcon fill="#188ba7" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="435.0" size="6em" />-->
+                        <ComboBox fx:id="login_user" layoutX="90.0" layoutY="465.0" onAction="#switchPage" prefHeight="30.0" prefWidth="150.0" promptText="Select User" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
@@ -60,49 +63,53 @@
                         </ComboBox>
                         <Label layoutX="68.0" layoutY="516.0" text="Have no account yet?" />
                         <Hyperlink fx:id="login_registerHere" layoutX="184.0" layoutY="513.0" onAction="#switchForm" text="Register here" />
+                  <ImageView fitHeight="120.0" fitWidth="150.0" layoutX="104.0" layoutY="327.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/pngwing.com.png" />
+                     </image></ImageView>
                     </children>
                 </AnchorPane>
-                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@style/landing.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane fx:id="register_form" layoutX="10.0" layoutY="10.0" prefHeight="550.0" prefWidth="330.0" styleClass="white-bg" stylesheets="@style/portal.css" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <FontAwesomeIcon fill="#188ba7" glyphName="USER_PLUS" layoutX="131.0" layoutY="90.0" size="5em" />
+<!--                        <FontAwesomeIcon fill="#188ba7" glyphName="USER_PLUS" layoutX="131.0" layoutY="90.0" size="5em" />-->
                         <Label layoutX="90.0" layoutY="99.0" text="Register Account" textFill="#188ba7">
                             <font>
                                 <Font name="Tahoma" size="20.0" />
                             </font>
                         </Label>
                         <Label layoutX="130.0" layoutY="125.0" text="Admin Portal" />
-                        <TextField fx:id="register_email" layoutX="39.0" layoutY="190.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@style/landing.css">
+                        <TextField fx:id="register_email" layoutX="39.0" layoutY="190.0" prefHeight="30.0" prefWidth="250.0" promptText="Email Address" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <TextField fx:id="register_username" layoutX="40.0" layoutY="227.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@style/landing.css">
+                        <TextField fx:id="register_username" layoutX="40.0" layoutY="227.0" prefHeight="30.0" prefWidth="250.0" promptText="Username" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
-                        <PasswordField fx:id="register_password" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/landing.css">
+                        <PasswordField fx:id="register_password" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/portal.css">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </PasswordField>
-                        <TextField fx:id="register_showPassword" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/landing.css" visible="false">
+                        <TextField fx:id="register_showPassword" layoutX="40.0" layoutY="263.0" prefHeight="30.0" prefWidth="250.0" promptText="Password" stylesheets="@style/portal.css" visible="false">
                             <styleClass>
                                 <String fx:value="textfield-1" />
                                 <String fx:value="white-bg" />
                             </styleClass>
                         </TextField>
                         <CheckBox fx:id="register_checkBox" layoutX="40.0" layoutY="299.0" mnemonicParsing="false" onAction="#registerShowPassword" text="Show Password" />
-                        <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="325.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@style/landing.css" text="Sign Up">
+                        <Button fx:id="register_signupBtn" layoutX="41.0" layoutY="325.0" mnemonicParsing="false" onAction="#registerAccount" prefHeight="40.0" prefWidth="250.0" stylesheets="@style/portal.css" text="Sign Up">
                             <styleClass>
                                 <String fx:value="btn-1" />
                                 <String fx:value="radius" />
                             </styleClass>
                         </Button>
-                        <FontAwesomeIcon fill="#188ba7" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="474.0" size="6em" />
+<!--                        <FontAwesomeIcon fill="#188ba7" glyphName="HOSPITAL_ALT" layoutX="136.0" layoutY="474.0" size="6em" />-->
                         <Label layoutX="60.0" layoutY="516.0" text="Already have an account?" />
                         <Hyperlink fx:id="register_loginHere" layoutX="195.0" layoutY="513.0" onAction="#switchForm" text="Login here" />
                     </children>
