--- a/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/MemberDashboard.fxml
@@ -72,25 +72,30 @@
                                     </font>
                                 </Label>
                                 <Line endX="88.0" layoutX="113.0" layoutY="152.0" startX="-100.0" stroke="WHITE" />
-<!--                                <FontAwesomeIcon fill="#c76565" glyphName="HOSPITAL_ALT" layoutX="60.0" layoutY="522.0" size="10em" AnchorPane.bottomAnchor="20.857139587402344" AnchorPane.leftAnchor="60.0" />-->
+<!--                                <FontAwesomeIcon fill="WHITE" glyphName="TROPHY" layoutX="60.0" layoutY="522.0" size="10em" AnchorPane.bottomAnchor="20.857139587402344" AnchorPane.leftAnchor="60.0" />-->
                                 <Label layoutX="13.0" layoutY="162.0" text="Feature" textFill="WHITE" />
                                 <Button fx:id="dashboard_btn" layoutX="7.0" layoutY="187.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Home">
                                     <graphic>
                                         <FontAwesomeIcon glyphName="HOME" size="1.5em" />
                                     </graphic>
                                 </Button>
-                                <Button fx:id="doctors_btn" layoutX="7.0" layoutY="237.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Doctors">
+                                <Button fx:id="trainers_btn" layoutX="7.0" layoutY="237.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Trainers">
                                     <graphic>
-                                        <FontAwesomeIcon glyphName="USER_MD" size="1.5em" />
+                                        <FontAwesomeIcon glyphName="USERS" size="1.5em" />
                                     </graphic>
                                 </Button>
-                                <Button fx:id="appointments_btn" layoutX="7.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Appointments">
+                                <Button fx:id="gymclasses_btn" layoutX="7.0" layoutY="287.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Gym Classes">
+                                    <graphic>
+                                        <FontAwesomeIcon glyphName="BOOKMARK" size="1.5em" />
+                                    </graphic>
+                                </Button>
+                                <Button fx:id="appointments_btn" layoutX="7.0" layoutY="337.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Appointments">
                                     <graphic>
                                         <FontAwesomeIcon glyphName="CALENDAR" size="1.5em" />
                                     </graphic>
                                 </Button>
-                                <Label layoutX="13.0" layoutY="339.0" text="Profile" textFill="WHITE" />
-                                <Button fx:id="profile_btn" layoutX="7.0" layoutY="364.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Profile Setting">
+                                <Label layoutX="13.0" layoutY="389.0" text="Profile" textFill="WHITE" />
+                                <Button fx:id="profile_btn" layoutX="7.0" layoutY="414.0" mnemonicParsing="false" onAction="#switchForm" prefHeight="40.0" prefWidth="200.0" styleClass="nav-btn-1" stylesheets="@style/Dashboard/dashboard.css" text="Profile Setting">
                                     <graphic>
                                         <FontAwesomeIcon glyphName="COGS" size="1.5em" />
                                     </graphic>
@@ -144,43 +149,33 @@
                                                                 <Font size="15.0" />
                                                             </font>
                                                         </Label>
-                                                        <FontAwesomeIcon fill="WHITE" glyphName="CARD" layoutX="165.0" layoutY="188.0" size="2em" />
-                                                        <Label layoutX="30.0" layoutY="223.0" text="Doctor Name:" textFill="WHITE">
+                                                        <FontAwesomeIcon fill="WHITE" glyphName="CREDIT_CARD" layoutX="165.0" layoutY="188.0" size="2em" />
+                                                        <Label layoutX="30.0" layoutY="223.0" text="Current card:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="home_doctor_name" layoutX="115.0" layoutY="223.0" prefHeight="19.0" prefWidth="147.0" text="Doctor Name:" textFill="WHITE">
+                                                        <Label fx:id="cur_card_name" layoutX="115.0" layoutY="223.0" prefHeight="19.0" prefWidth="147.0" text="card name:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label layoutX="30.0" layoutY="256.0" text="Specialization:" textFill="WHITE">
+                                                        <Label layoutX="30.0" layoutY="256.0" text="Subscribe Date:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="home_doctor_specialization" layoutX="115.0" layoutY="256.0" prefHeight="19.0" prefWidth="147.0" text="Doctor Name:" textFill="WHITE">
+                                                        <Label fx:id="cur_card_begin_date" layoutX="115.0" layoutY="256.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label layoutX="26.0" layoutY="289.0" text="Email Address:" textFill="WHITE">
+                                                        <Label layoutX="26.0" layoutY="289.0" text="Expired:" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
                                                         </Label>
-                                                        <Label fx:id="home_doctor_email" layoutX="115.0" layoutY="289.0" prefHeight="19.0" prefWidth="147.0" text="Doctor Name:" textFill="WHITE">
-                                                            <font>
-                                                                <Font size="13.0" />
-                                                            </font>
-                                                        </Label>
-                                                        <Label layoutX="14.0" layoutY="322.0" text="Mobile Number:" textFill="WHITE">
-                                                            <font>
-                                                                <Font size="13.0" />
-                                                            </font>
-                                                        </Label>
-                                                        <Label fx:id="home_doctor_mobileNumber" layoutX="115.0" layoutY="322.0" prefHeight="19.0" prefWidth="147.0" text="Doctor Name:" textFill="WHITE">
+                                                        <Label fx:id="cur_card_end_date" layoutX="115.0" layoutY="289.0" prefHeight="19.0" prefWidth="147.0" text="9/11/2000" textFill="WHITE">
                                                             <font>
                                                                 <Font size="13.0" />
                                                             </font>
@@ -216,7 +211,7 @@
                                         </AnchorPane>
                                     </children>
                                 </AnchorPane>
-                                <AnchorPane fx:id="doctors_form" layoutX="324.0" layoutY="144.0" prefHeight="560.0" prefWidth="886.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <AnchorPane fx:id="trainers_form" layoutX="324.0" layoutY="144.0" prefHeight="560.0" prefWidth="886.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
                                         <AnchorPane layoutX="9.0" layoutY="12.0" prefHeight="537.0" prefWidth="868.0" stylesheets="@style/Dashboard/dashboard.css" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="12.0">
                                             <styleClass>
@@ -225,7 +220,7 @@
                                                 <String fx:value="radius" />
                                             </styleClass>
                                             <children>
-                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="All Doctors">
+                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="All Trainers">
                                                     <font>
                                                         <Font size="18.0" />
                                                     </font>
@@ -242,6 +237,33 @@
                                         </AnchorPane>
                                     </children>
                                 </AnchorPane>
+                                <AnchorPane fx:id="gymclasses_form" layoutX="324.0" layoutY="144.0" prefHeight="560.0" prefWidth="886.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                    <children>
+                                        <AnchorPane layoutX="9.0" layoutY="12.0" prefHeight="537.0" prefWidth="868.0" stylesheets="@style/Dashboard/dashboard.css" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="9.0" AnchorPane.topAnchor="12.0">
+                                            <styleClass>
+                                                <String fx:value="white-bg" />
+                                                <String fx:value="shadow" />
+                                                <String fx:value="radius" />
+                                            </styleClass>
+                                            <children>
+                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Gym Classes">
+                                                    <font>
+                                                        <Font size="18.0" />
+                                                    </font>
+                                                </Label>
+                                                <ScrollPane fx:id="doctors_scrollPane" layoutX="11.0" layoutY="57.0" prefHeight="466.0" prefWidth="846.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="57.0">
+                                                    <content>
+                                                        <GridPane fx:id="doctors_gridPane" prefHeight="19.0" prefWidth="107.0">
+                                                            <columnConstraints>
+                                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                            </columnConstraints>
+                                                        </GridPane>
+                                                    </content></ScrollPane>
+                                            </children>
+                                        </AnchorPane>
+                                    </children>
+                                </AnchorPane>
+
                                 <AnchorPane fx:id="appointments_form" layoutX="5.0" layoutY="5.0" prefHeight="560.0" prefWidth="886.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <children>
                                         <AnchorPane layoutX="9.0" layoutY="12.0" prefHeight="537.0" prefWidth="513.0" stylesheets="@style/Dashboard/dashboard.css" AnchorPane.bottomAnchor="11.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="364.0" AnchorPane.topAnchor="12.0">
@@ -251,7 +273,7 @@
                                                 <String fx:value="radius" />
                                             </styleClass>
                                             <children>
-                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Appointments Details">
+                                                <Label layoutX="14.0" layoutY="14.0" styleClass="header-2" stylesheets="@style/Dashboard/member_dashboard.css" text="Course Details">
                                                     <font>
                                                         <Font size="18.0" />
                                                     </font>
@@ -386,7 +408,7 @@
                                             <children>
                                                 <Circle fx:id="profile_circle" fill="#3c434a" layoutX="137.0" layoutY="95.0" radius="81.0" stroke="BLACK" strokeType="INSIDE" />
                                                 <Button fx:id="profile_importBtn" layoutX="62.0" layoutY="184.0" mnemonicParsing="false" onAction="#profileImportBtn" prefHeight="30.0" prefWidth="150.0" styleClass="btn-3" stylesheets="@style/Dashboard/member_dashboard.css" text="Import" />
-                                                <Label layoutX="62.0" layoutY="254.0" text="Patient ID:">
+                                                <Label layoutX="62.0" layoutY="254.0" text="Member ID:">
                                                     <font>
                                                         <Font size="13.0" />
                                                     </font>
