--- a/src/main/resources/com/framja/gymmanagement/TrainerCard.fxml
+++ b/src/main/resources/com/framja/gymmanagement/TrainerCard.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.Button?>
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="250.0" prefWidth="300.0" stylesheets="@style/Dashboard/dashboard.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.framja.gymmanagement.controller.TrainerCardController">
     <children>
         <VBox prefHeight="200.0" prefWidth="100.0">
@@ -28,7 +29,7 @@
                                 <Font size="15.0" />
                             </font>
                         </Label>
-                        <Label fx:id="trainer_id" prefHeight="21.0" prefWidth="206.0" text="Label">
+                        <Label fx:id="trainer_phone_number" prefHeight="21.0" prefWidth="206.0" text="Label">
                             <font>
                                 <Font size="15.0" />
                             </font>
@@ -60,7 +61,7 @@
                 </HBox>
                 <HBox layoutX="20.0" layoutY="144.0" prefHeight="25.0" prefWidth="300.0">
                     <children>
-                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="152.0" text="Specialization">
+                        <Label alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="152.0" text="Specialization:">
                             <HBox.margin>
                                 <Insets left="10.0" right="10.0" />
                             </HBox.margin>
@@ -88,7 +89,7 @@
                                 <Font size="15.0" />
                             </font>
                         </Label>
-                        <Label fx:id="trainer_email" prefHeight="17.0" prefWidth="222.0" text="Label">
+                        <Label fx:id="trainer_address" prefHeight="17.0" prefWidth="222.0" text="Label">
                             <font>
                                 <Font size="15.0" />
                             </font>
@@ -98,6 +99,7 @@
                         <Insets left="10.0" right="10.0" />
                     </VBox.margin>
                 </HBox>
+
             </children>
         </VBox>
     </children>
